# VC_lab_04_aa25-26

./: CMakeLists.txt  README.md
config/: definitions.hpp
src/opencv/: CMakeLists.txt
src/test/: integration.cpp  make-panorama.cpp  test4.cpp
